unpackaged/main/default/objects/X20_Group_Member_Contact__c/X20_Group_Member_Contact__c.object-meta.xml
<CustomObject>
    <label>20 Group Member Contact</label>
    <nameField>
        <label>20 Group Member Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>20 Group Member Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>