unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>20 Group Member Contacts</relationshipLabel>
    <relationshipName>X20_Group_Member_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>