unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Active_Date__c</fullName>
    <label>Contact Active Date</label>
    <type>Date</type>
</CustomField>