unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Disconnect_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Disconnect_Date__c</fullName>
    <label>Contact Disconnect Date</label>
    <type>Date</type>
</CustomField>