unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Disconnect_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Disconnect_Notes__c</fullName>
    <label>Contact Disconnect Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>