unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Disconnect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contact_Disconnect_Reason__c</fullName>
    <label>Contact Disconnect Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Member Left Group</fullName>
            </value>
            <value>
                <fullName>Contact Member Left Dealership</fullName>
            </value>
            <value>
                <fullName>Contact Member New Position</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>