unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Address__c</fullName>
    <formula>Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing Address</label>
    <type>Text</type>
</CustomField>