unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_City__c</fullName>
    <formula>Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing City</label>
    <type>Text</type>
</CustomField>