unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Country__c</fullName>
    <formula>Contact__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing Country</label>
    <type>Text</type>
</CustomField>