unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Postal_Code__c</fullName>
    <formula>Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing Postal Code</label>
    <type>Text</type>
</CustomField>