unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_State__c</fullName>
    <formula>Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing State</label>
    <type>Text</type>
</CustomField>