unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Contact_Member_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Member_Notes__c</fullName>
    <label>Contact Member Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>