unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Department_NCM_Classification__c.field-meta.xml
<CustomField>
    <fullName>Department_NCM_Classification__c</fullName>
    <formula>TEXT( Contact__r.NCM_Department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department (NCM Classification)</label>
    <type>Text</type>
</CustomField>