unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Differs_from_Contact_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Differs_from_Contact_Mailing_Address__c</fullName>
    <formula>X20G_Shipping_Address__c &lt;&gt;  Contact_Mailing_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Differs from Contact Mailing Address</label>
    <type>Checkbox</type>
</CustomField>