unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Differs_from_Contact_Primar__c.field-meta.xml
<CustomField>
    <fullName>Differs_from_Contact_Primar__c</fullName>
    <formula>Member_Email__c &lt;&gt;  Contact__r.Email</formula>
    <label>Differs from Contact Primary Email</label>
    <type>Checkbox</type>
</CustomField>