unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/EXEC_Committee__c.field-meta.xml
<CustomField>
    <fullName>EXEC_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Must be a member with Active status.</inlineHelpText>
    <label>EXEC Committee</label>
    <type>Checkbox</type>
</CustomField>