unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Group_Distribution_Lists__c.field-meta.xml
<CustomField>
    <fullName>Group_Distribution_Lists__c</fullName>
    <label>Group Distribution Lists</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>