unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <formula>X20_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group ID</label>
    <type>Text</type>
</CustomField>