unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Group_Listserv_Access__c.field-meta.xml
<CustomField>
    <fullName>Group_Listserv_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listserv</label>
    <type>Checkbox</type>
</CustomField>