unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/List_Serv_Access__c.field-meta.xml
<CustomField>
    <fullName>List_Serv_Access__c</fullName>
    <formula>AND(
    Group_Listserv_Access__c,
    ISPICKVAL(Contact_Status__c, &#39;Active&#39;),
    OR(
        ISPICKVAL( X20_Groups_Member__r.Status__c, &#39;Active&#39;),
        ISPICKVAL( X20_Groups_Member__r.Status__c, &#39;Active - Don\&#39;t Bill&#39;)
    ),
    X20_Groups_Member__r.Group_ID__r.Listserv_Access__c,
    ISPICKVAL(X20_Groups_Member__r.Group_ID__r.Status__c, &#39;Active&#39;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Serv Access</label>
    <type>Checkbox</type>
</CustomField>