unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/List_Serv_Email__c.field-meta.xml
<CustomField>
    <fullName>List_Serv_Email__c</fullName>
    <label>List Serv Email</label>
    <type>Email</type>
</CustomField>