unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Member_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Account_Status__c</fullName>
    <formula>TEXT( X20_Groups_Member__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Account Status</label>
    <type>Text</type>
</CustomField>