unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <label>Member Email</label>
    <type>Email</type>
</CustomField>