unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Member_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Member_Nickname__c</fullName>
    <label>Member Nickname</label>
    <length>28</length>
    <type>Text</type>
</CustomField>