unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Old_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Old_Email_Address__c</fullName>
    <label>Old Email Address</label>
    <type>Email</type>
</CustomField>