unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Email (From Contact)</label>
    <type>Text</type>
</CustomField>