unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>20 Group Member Contacts (Spouse)</relationshipLabel>
    <relationshipName>X20_Group_Member_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>