unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/X20_Group__c.field-meta.xml
<CustomField>
    <fullName>X20_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Group</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>20 Group Member Contacts</relationshipLabel>
    <relationshipName>X20_Group_Member_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>