unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/X20_Group_Marketo_Sync__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Marketo_Sync__c</fullName>
    <formula>X20_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>20 Group Marketo Sync</label>
    <type>Text</type>
</CustomField>