unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/X20_Groups_Member__c.field-meta.xml
<CustomField>
    <fullName>X20_Groups_Member__c</fullName>
    <label>20 Groups Member</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipLabel>20 Group Member Contacts</relationshipLabel>
    <relationshipName>X20_Group_Member_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>