unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/X20G_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>X20G_Shipping_Country__c</fullName>
    <label>20G Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>