unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/X20G_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>X20G_Shipping_Postal_Code__c</fullName>
    <label>20G Shipping Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>