unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/X20G_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>X20G_Shipping_State__c</fullName>
    <label>20G Shipping State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>