unpackaged/main/default/objects/X20_Group_Member_Contact__c/fields/X20GroupMemberContactID_18__c.field-meta.xml
<CustomField>
    <fullName>X20GroupMemberContactID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>20GroupMemberContactID(18)</label>
    <type>Text</type>
</CustomField>