unpackaged/main/default/objects/X20_Group_Member_Contact__c/validationRules/EXEC_Committee_Eligible.validationRule-meta.xml
<ValidationRule>
    <fullName>EXEC_Committee_Eligible</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(EXEC_Committee__c),
 EXEC_Committee__c = True,
 OR(
   NOT(ISPICKVAL(Contact_Type__c, &#39;Member&#39;)),
   NOT(ISPICKVAL(Contact_Status__c, &#39;Active&#39;))
 )
)</errorConditionFormula>
    <errorMessage>Must be a &#39;Member&#39; with &#39;Active&#39; Status to be on EXEC Committee. Please correct the record and save again.</errorMessage>
</ValidationRule>